fixing text overlap in add dataset page

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -1667,3 +1667,4 @@ margin-top:0px
 {
     background-color: #eef7ff !important;
 }
+.stages{margin-top:0px !important;}
